Increase relevance for jumplist actions when name is an exact match

BUG: 455436